--- a/views/loginSearches.ejs
+++ b/views/loginSearches.ejs
@@ -3,7 +3,7 @@
   <!-- navbar -->
   <div class="nav-container sticky-top">
     <div class="flex-div left-side-div">
-      <a href="/" style="color: white"
+      <a href="/loginHomepage" style="color: white"
         ><span class="material-symbols-outlined" style="">Home</span></a
       >
     </div>
@@ -40,14 +40,17 @@
           "
         >
           <div class="p-3">
-            <form action="/homepage">
+
+            <form action="/loginHomepage">
               <button
                 class="log-out m-1"
                 style="width: 100%; border: none; background-color: transparent"
               >
-                Logout
+                Home
               </button>
             </form>
+
+           
 
             <form action="/homepage/signUp/orders">
               <button
@@ -66,6 +69,16 @@
                 Cart
               </button>
             </form>
+
+            <form action="/homepage">
+              <button
+                class="log-out m-1"
+                style="width: 100%; border: none; background-color: transparent"
+              >
+                Logout
+              </button>
+            </form>
+            
           </div>
         </div>
       </div>
