--- a/views/searches.ejs
+++ b/views/searches.ejs
@@ -4,7 +4,7 @@
   <!-- navbar -->
   <div class="nav-container sticky-top">
     <div class="flex-div first-div">
-      <a href="/" style="color: white"
+      <a href="/homepage" style="color: white"
         ><span class="material-symbols-outlined">Home</span></a
       >
     </div>
@@ -41,6 +41,16 @@
           "
         >
           <div class="p-3">
+
+            <form action="/homepage">
+              <button
+                class="login m-1"
+                style="width: 100%; border: none; background-color: transparent"
+              >
+                Home
+              </button>
+            </form>
+
             <form action="/homepage/login">
               <button
                 class="login m-1"
