--- a/views/adminform.ejs
+++ b/views/adminform.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/biolerplate") %>
 <head>
     <!-- for use axios -->
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
 </head>
 <body >
     <div class="login-container" >
