--- a/views/loginShow.ejs
+++ b/views/loginShow.ejs
@@ -20,7 +20,7 @@
     </div>
     <div class="row mt-3">
     <div class="col  col-8 offset-3">
-        <form action="/homepage/signUp/<%=item._id%>/buy" method="get">
+        <form action="/homepage/signUp/<%=item._id%>/confirmBuy" method="get">
           <button class="btn btn-success" style="width:88%">Buy</button>
         </form>
     </div>
