--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -1,29 +1,180 @@
 <% layout("/layouts/biolerplate") %>
 <body>
-   <div class="row">
+   <div class="">
         
-       <div class="col col-8 offset-3 order-col">
-        <h2>All orders...</h2>
-            <%for(order of Orders.orders){%>
-            <div class="card " style="padding:1rem;">
-                <button class="btn btn-primary col-8 offset-2 mb-3">OrderID: <%=order._id%></button>
-                <img src="<%=order.orderImage%>" alt="image not loaded"  class="card-img-top" style="height:15rem;">
-               
-                <ul>
-                    <li><b><%=order.orderName%></b></li>
-                    <li><b>&#8377;<%=order.orderPrice.toLocaleString("en-IN") %> </b></li>
-                    <li><i><span class="material-symbols-outlined" style="position:relative; top:8px;">local_shipping</span> <b><%=order.orderStatus%></b></i></li>
-                    <li><b>Username: <%=order.customerName%></b></li>
-                    <li><b>Address: <%=order.orderAddress%></b></li>
-                    <li><b><i>MobNo: <%=order.mobNo%></i></b></li>
-                    <li><b><i>Order Status: <span style="color:green"><%=order.status%></span> </i></b></li>
-                    <li><b><i>Payment mathod: <span style="color:green">Cash on Delivery</span> </i></b></li>
-                </ul>
-                <a href="/homepage/signUp/<%=Orders._id%>/cancelOrder/<%=order._id%>" class="btn btn-danger">Cancel Order</a>
+        <!-- navbar -->
+        <div class="nav-container sticky-top">
+            <div class="flex-div left-side-div">
+              <a href="/loginHomepage" style="color:white;"><span class="material-symbols-outlined" style="">Home</span></a>
+           </div>
+  
+           <div class="flex-div middle-side-div">
+  
+             <!-- show only when screen size is <=770px -->
+            <div class="hamberger-container" style="visibility:hidden;">
+              <button class="hamberger-btn" style="background: none; border:none; color:white;";>
+                <span class="material-symbols-outlined hamberger-icon" style="padding:4px; font-size:2rem; margin-right: 2rem;">
+                  menu
+                </span>
+                <span class="material-symbols-outlined position-absolute cross-icon" style="top:20%; left:3% ;font-size:30px; visibility:hidden;">
+                  close
+                </span>
+              </button>
+  
+              <div class="position-absolute hamberger-content" style="visibility:hidden; min-width:20%; position:relative; left:-200px; ">             
+                <div class=" p-3">
+  
+                  <form action="/loginHomepage" method="get" >
+                    <button class="carts m-1" style="width:100%; border:none; background-color: transparent; ">Home</button>             
+                  </form> 
+  
+                  <form action="/loginHomepage/account">
+                    <button class="carts m-1" style="width:100%; border:none; background-color: transparent; ">Account</button>
+                 </form>         
+                
+                  
+                 <!-- <form action="/homepage/signUp/orders">
+                  <button class="orders m-1" style="width:100%; border:none; background-color: transparent;">Your Orders</button>
+                </form>            
+    
+                <form action="/homepage/signUp/cart" method="get" >
+                  <button class="carts m-1" style="width:100%; border:none; background-color: transparent; ">Cart</button>             
+                </form> 
+  
+              <form  onsubmit="handleLogout(event)">
+                <button class="log-out m-1" style="width:100%; border:none; background-color: transparent; ">Logout</button>
+             </form>   -->
+  
+                </div>                
+              </div>
+              
+           </div>
+                
+                <form action="/homepage/signUp/searchResult" method="post">
+                  <div class="flex-div input-box">
+                    <select name="selectedCategory" id="combo-select" onchange="toggleInputField()">
+                      <option value="">---Search---</option>
+                      <option value="Mobiles">Mobiles</option>
+                      <option value="Laptops">Laptops</option>
+                      <option value="Earbuds">Earbuds</option>
+                      <option value="Cables">Cables</option>
+                      <option value="Neckbands">Neckbands</option>
+                      <option value="Watches">Watches</option>
+                      <option value="Mouses">Mouses</option>
+                      <option value="Keyboards">Keyboards</option>
+                      <option value="Monitors">Monitors</option>
+                      <option value="Other">Other</option>
+                      
+                   </select>
+                   <input type="text" name="customCategory" placeholder="Type Model..." id="combo-input" style="display:none;">
+                   
+                  <button class="btn btn-danger search-btn" >Search</button>
+                 </div>
+                </form>
             </div>
-            
+  
+            <!-- show only when screen size is <=770px -->
+            <div style="position:absolute; left:90%; display: none;" class="small-screen-cart">
+              <form action="/homepage/signUp/cart" method="get" >
+                <button class="cart-btn" style="margin-right:1rem;"><span class="material-symbols-outlined cart" style="margin-left:0rem; color:white;">shopping_cart</span></button>
+                <% if(cart){%>
+                  <div class="show-cart-num" style="position:absolute; top:-11px; "><span ><%=cart%></span></div>
+                <%}%>
+              </form>
+            </div> 
+            <!-- -->
+  
+            <div class="flex-div right-side-div">
+                 
+  
+                  <form action="/loginHomepage/account">
+                     <button style="border:none; background-color: transparent; color:white; margin-right:2rem; position:relative; top:5px">
+                      <i class="fa-regular fa-user" style="font-size:22px;"></i>
+                    </button>
+                  </form>
+  
+                  
+                  <form action="/homepage/signUp/cart" method="get" >
+                      <button class="cart-btn" style="margin-right:1rem;"><span class="material-symbols-outlined cart" style="margin-left:0rem; color:white; position:relative; top:5px; ">shopping_cart</span></button>
+                      <% if(cart){%>
+                        <div class="show-cart-num"><%=cart%></div>
+                      <%}%>
+                  </form>
+            </div>
+          </div>
+
+          <!-- All orders -->
+       <div style="max-width: 1500px; margin:1rem auto;">
+        <!-- <h2 class="mx-4">All orders</h2> -->
+            <%for(order of Orders.orders){%>
+         <a href="/homepage/signUp/<%=order._id%>/<%=Orders._id%>" style="text-decoration: none; color:black;">
+            <div class="orders-container" style="display:flex; justify-content: space-between; margin:0.5rem 0;padding:1rem; background-color:white;">
+                <!-- <button class="btn btn-primary col-8 offset-2 mb-3">OrderID: <%=order._id%></button> -->
+                <div style="display: flex; justify-content: center; align-items: center; flex-direction: column; width:200px;">
+                    <p><img src="<%=order.orderImage%>" alt="image not loaded"  class="" style="height:3rem;"></p>
+                    <p style="color:rgb(22, 173, 22); font-size:large; font-weight:bold;"> <%=order.status%></p>
+                </div>
+                
+              
+                  <div style="display: flex; justify-content: center; align-items: center; flex-direction: column; width:200px;">
+                    <p style="margin-bottom:0;"><%=order.orderPrice.toLocaleString("en-IN")%> &#8377;</p>
+                    <p style="color:grey; font-size:small;">Cash on Delivery</p>
+                  </div>           
+                                            
+                  <div style="display: flex; justify-content: center; align-items: center; flex-direction: column; width:200px;">
+                    <p style="margin-bottom:0;"><%=order.orderName%></p>                    
+                  </div>                 
+          
+               
+               
+                <!-- <a href="/homepage/signUp/<%=Orders._id%>/cancelOrder/<%=order._id%>" class="btn btn-danger">Cancel Order</a> -->
+            </div>
+         </a>
             <%}%>
        </div>
-       <a href="/loginHomepage" class="btn btn-success col-8 offset-3">Continue Shop</a>
+     
    </div>
+
+  <div style="margin:2rem; display:flex; justify-content:center; align-items:center;">
+    <a href="/loginHomepage" style="padding:0.5rem 1rem; background-color: rgb(20, 146, 146);color:white;text-decoration:none;"   >Continue Shopping</a
+      >
+  </div>
+  
+   
+   
+   <script>
+        // hamberger-btn
+    const hBtn = document.querySelector(".hamberger-btn");
+    const hContent = document.querySelector(".hamberger-content");
+    const crossIcon = document.querySelector(".cross-icon");
+    const hambergerIcon = document.querySelector(".hamberger-icon");
+
+    hBtn.addEventListener("click", () => {
+      if (hContent.style.visibility === "hidden") {
+        crossIcon.style.visibility = "visible";
+        hambergerIcon.style.visibility = "hidden";
+        hContent.style.visibility = "visible";
+        hContent.style.left = "0px";
+        // hContent.style.opacity=1;
+      } else {
+        crossIcon.style.visibility = "hidden";
+        hambergerIcon.style.visibility = "visible";
+        hContent.style.left = "-200px";
+        hContent.style.visibility = "hidden";
+      }
+    });
+
+    // combo search functionality
+    function toggleInputField() {
+      const comboSelect = document.querySelector("#combo-select");
+      const comboInput = document.querySelector("#combo-input");
+
+      if (comboSelect.value === "Other") {
+        comboSelect.style.display = "none";
+        comboInput.style.display = "block";
+      } else {
+        comboInput.style.display = "none";
+      }
+    }
+   </script>
 </body>
